--- a/牛血清白蛋白进口监管措施.md
+++ b/牛血清白蛋白进口监管措施.md
@@ -33,7 +33,7 @@
 
 具体所需材料参照《质检总局关于推广京津冀沪进境生物材料监管试点经验及开展新一轮试点的公告》（2017 年第 94 号公告）中 《进境生物材料风险级别及检疫监管措施清单》判断产品的风险级别及是否需要办理检疫审批，如下图。
 
-![图示2](bio-material-risk-grade)
+![图示2](images/bio-material-risk-grade.png)
 
 根据上述监管措施，可见牛血液制品应属于：
 
@@ -105,6 +105,7 @@
 - 取得《进境动植物检疫许可证》
 - 口岸查验
 - 标签完整且符合法规
+
 
 
 
