--- a/docs/牛血清白蛋白进口监管措施.md
+++ b/docs/牛血清白蛋白进口监管措施.md
@@ -1,3 +1,10 @@
+---
+title:  牛血清白蛋白进口监管措施
+author: 赵博
+date: 2025-12-11
+tags: [Abcam, 牛血清, BSA, 生物材料, 动植]
+---
+
 ## 牛血清白蛋白(BSA) 进口监管措施
 
 ### 一、牛血清白蛋白属于哪一类产品？
@@ -105,6 +112,7 @@
 - 取得《进境动植物检疫许可证》
 - 口岸查验
 - 标签完整且符合法规
+
 
 
 
