--- a/docs/牛血清白蛋白进口监管措施.md
+++ b/docs/牛血清白蛋白进口监管措施.md
@@ -90,7 +90,7 @@ description: 牛血清白蛋白、实验试剂的进口监管分析
 
 ### 五、实操建议
 
-该产品为试剂盒类（税号3822190090），对应的CIQ编码与本案例的有：
+该产品为试剂盒类（税号3822190090），与本案例有关的对应CIQ编码有：
 
 1. 405：（仅含特殊物品）含除血液等人体组织、病原微生物外其他特殊物品成分的，用于人类医学相关领域，纳入药品、兽药、医疗器械管理的除外
 2. 106：（仅含动物源成分）含动物源性成分的商品化实验用试剂
@@ -115,6 +115,7 @@ description: 牛血清白蛋白、实验试剂的进口监管分析
 - 取得《进境动植物检疫许可证》
 - 口岸查验
 - 标签完整且符合法规
+
 
 
 
